Fixed shared content table items not vertically aligned top

--- a/shared-content.css
+++ b/shared-content.css
@@ -160,6 +160,7 @@
 	padding-top: 0px;
 	padding-left: 0px;
 	margin: 0px;
+	vertical-align: top;
 }
 
 
